<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/button5"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/myWalletText"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="58dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:text="@string/quotationsText"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="129dp"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:text="@string/settingsText"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="198dp"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/exitText"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="376dp" />

</LinearLayout>
