<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="326dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/messageInfo"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happyInfo"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="229dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="152dp"
        android:contentDescription="@string/happyIcon"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="290dp" />


</LinearLayout>
